Fix flexbox alignemnt to bottom in IE10.

--- a/src/stylesheets/comments.scss
+++ b/src/stylesheets/comments.scss
@@ -133,6 +133,7 @@
 		display: flex;
 
 		.o-chat--comments-container {
+			flex: 0 1 auto;
 			align-self: flex-end;
 		}
 	}
